# LLMs-from-scratch

./: .gitignore  pyproject.toml  ruff.toml
appendix-A/01_main-chapter-code/: code-part2.ipynb
ch02/01_main-chapter-code/: ch02.ipynb
ch02/02_bonus_bytepair-encoder/: compare-bpe-tiktoken.ipynb
ch02/04_bonus_dataloader-intuition/: dataloader-intuition.ipynb
ch03/01_main-chapter-code/: ch03.ipynb
