[tool.uv]
python-preference = "managed"

[project]
name = "llms-from-scratch"
version = "1.0.6"
description = "Implement a ChatGPT-like LLM in PyTorch from scratch, step by step"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "jupyterlab>=4.0",
    "tiktoken>=0.8.0",
    "matplotlib>=3.7.1",
    "tensorflow>=2.18.0",
    "tqdm>=4.66.1",
    "numpy>=1.26,<2.0",
    "pandas>=2.2.1",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "ruff",
    "transformers",
    "ipywidgets"
]
